deploy/k8s/egress-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egress-rabbitmq
  labels:
    app.kubernetes.io/name: minicloud
    app.kubernetes.io/component: egress-rabbitmq
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: egress-rabbitmq
  ports:
    - name: http
      port: 8080
      targetPort: http
