deploy/k8s/httpcall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpcall
  labels:
    app.kubernetes.io/name: minicloud
    app.kubernetes.io/component: httpcall
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: httpcall
  ports:
    - name: http
      port: 8080
      targetPort: http
