deploy/k8s/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  labels:
    app.kubernetes.io/name: minicloud
    app.kubernetes.io/component: orchestrator
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: orchestrator
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30083
      protocol: TCP
