deploy/k8s/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage
  labels:
    app.kubernetes.io/name: minicloud
    app.kubernetes.io/component: storage
spec:
  selector:
    app.kubernetes.io/name: storage
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
